feat: 完善财务/智能体/素材库/系统设置及会员活动等业务模块
- 财务看板与权限、智能体配置与知识库发布（V35 迁移）
- 素材库上传修复与分组统计；运费模板与角色权限编辑
- 会员权益/领券/活动签到/SMS 验证码；商品分类与统计 API
- 管理端多模块 API 对齐；小程序活动/预约/来源渠道